# KhinsiderHelper

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: main.ts  starfield.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: auth.rs  download.rs  main.rs  models.rs  scraper.rs  state.rs
app/src/lib/: events.ts  tauri.ts
app/src/pages/: downloads.ts  library.ts  login.ts  search.ts  settings.ts
app/src/styles/: components.css  global.css
